force-app/main/default/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Family_Qualifies_for_Calendar_Rem_Email__c</fullName>
        <description>One of 3 criteria that identifies whether or not a parent qualifies for the calendar view automated reminder email. The others are the relevant &apos;School Mapping&apos; custom setting for the school and No_Calendar_View_Last_7_Days__pc = TRUE for the relevant contact or person account</description>
        <formula>OR(Family_Status__c = &quot;In School&quot;, AND(Family_Status__c = &quot;Future Enrolment&quot;, Starting_Date__c - 14 &lt;= TODAY() ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Qualifies for Calendar Rem. Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Status_Copy__c</fullName>
        <description>Ben 21/09/2017: Used in email alerts containing the Family Status field on account because for some reason Account.Family_Status__c will show Rejected/Terminated on the email alert in all cases. I&apos;m not entirely sure why and didn&apos;t have time to investigate, but probably something to do with roll-up summary fields and how they&apos;re calculated.</description>
        <formula>Family_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Status Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Status__c</fullName>
        <formula>IF( 
   Enrolled__c = &quot;Yes&quot;, 
   IF( 
      Starting_Date__c &lt;= TODAY(), 
      &quot;In School&quot;, 
      &quot;Future Enrolment&quot;
      ), 
   IF( 
      Enrolled__c = &quot;Waiting List&quot;, 
      &quot;Waiting List&quot;,
      IF( 
         AND(
             Leaving_Date__c &lt;= TODAY(), 
             Percentage_Enrolled__c = 0
             ),
             &quot;Left&quot;, 
          IF(
             Percentage_Enrolled__c = 0, 
             &quot;Rejected/Terminated&quot;,
             &quot;Applying&quot;
             )
         )
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Status (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Surnames__c</fullName>
        <description>Defines the family surname/names for use on reports</description>
        <formula>IF(AND(Related_Contact_Record_P2__c &lt;&gt; &quot;&quot;, Related_Contact_Record_P2__r.LastName &lt;&gt; LastName), LastName&amp;&quot; / &quot;&amp;Related_Contact_Record_P2__r.LastName, LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Surname(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_UID__c</fullName>
        <description>The UID that links students and contacts in School Kompanion</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Family UID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fifth_Car_Plate_Number__c</fullName>
        <label>Fifth Car Plate Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Application_Form_URL__c</fullName>
        <formula>&quot;https://tfaforms.com/4688729?tfa_AccountId=&quot;&amp;Id&amp;&quot;&amp;tfa_9649970064848=&quot;&amp;Related_Contact_Record_P2__r.Id&amp;&quot;&amp;tfa_9649970064811=&quot;&amp;SchoolText__pc&amp;&quot;&amp;tfa_9649970064842=&quot;&amp;Account_Has_Second_Parent__c&amp;&quot;&amp;tfa_9649970064853=&quot;&amp;F_Info_Thank_You_Page_Logo_URL__c&amp;&quot;&amp;tfa_9649970064795=&quot;&amp;First_Parent_Full_Name__c&amp;&quot;&amp;tfa_9649970064828=&quot;&amp;Second_Parent_Full_Name__c&amp;&quot;&amp;tfa_9649970064829=&quot;&amp;TEXT(Contact_Relationship__pc)&amp;&quot;&amp;tfa_9649970064837=&quot;&amp;Account_Relationship_Formula__c&amp;&quot;&amp;tfa_FatherOccupation=&quot;&amp;Contact_Employment_Sector__pc&amp;&quot;&amp;tfa_MotherOccupation=&quot;&amp;Account_Employment_Sector_Formula__c&amp;&quot;&amp;tfa_FatherEmployerc=&quot;&amp;Contact_Employer__pc&amp;&quot;&amp;tfa_MotherEmployerc=&quot;&amp;Account_Employer_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Aid Application Form URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Car_Plate_Number__c</fullName>
        <label>First Car Plate Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Health_Insurance_Coverage__c</fullName>
        <label>First Date of Health Insurance Coverage</label>
        <summarizedField>Employment_Agreement__c.Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Employment_Agreement__c.Status__c</field>
            <operation>equals</operation>
            <value>Signed- Not Started, Active, Expired</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Employment_Agreement__c.Health_Insurance__c</field>
            <operation>equals</operation>
            <value>International, Both</value>
        </summaryFilterItems>
        <summaryForeignKey>Employment_Agreement__c.Staff_Member__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Parent_Full_Name__c</fullName>
        <formula>TEXT(Salutation) &amp;&quot; &quot;&amp; FirstName &amp;&quot; &quot;&amp;  LastName</formula>
        <label>Parent/Guardian 1 Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follet_Tutor_Group__c</fullName>
        <formula>Tutor_Group__pr.Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follet Tutor Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Car_Plate_Number__c</fullName>
        <label>Fourth Car Plate Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Diff_House_Enrolled_Students__c</fullName>
        <formula>OR(
   AND(
       Enrolled_Normans_Students_in_Family__c &gt; 0,
       OR(
          Enrolled_Romans_Students_in_Family__c &gt; 0,
          Enrolled_Saxons_Students_in_Family__c &gt; 0,
          Enrolled_Vikings_Students_in_Family__c &gt; 0
          )
       ),
   AND(
       Enrolled_Romans_Students_in_Family__c &gt; 0,
       OR(
          Enrolled_Normans_Students_in_Family__c &gt; 0,
          Enrolled_Saxons_Students_in_Family__c &gt; 0,
          Enrolled_Vikings_Students_in_Family__c &gt; 0
          )
       ),
   AND(
       Enrolled_Saxons_Students_in_Family__c &gt; 0,
       OR(
          Enrolled_Normans_Students_in_Family__c &gt; 0,
          Enrolled_Romans_Students_in_Family__c &gt; 0,
          Enrolled_Vikings_Students_in_Family__c &gt; 0
          )
       ),
   AND(
       Enrolled_Vikings_Students_in_Family__c &gt; 0,
       OR(
          Enrolled_Normans_Students_in_Family__c &gt; 0,
          Enrolled_Romans_Students_in_Family__c &gt; 0,
          Enrolled_Saxons_Students_in_Family__c &gt; 0
          )
       ),
   AND(
       Enrolled_Jaguars_Students_in_Family__c &gt; 0,
       OR(
          Enrolled_Lions_Students_in_Family__c &gt; 0,
          Enrolled_Tigers_Students_in_Family__c &gt; 0,
          Enrolled_Panthers_Students_in_Family__c &gt; 0
          )
       ),
   AND(
       Enrolled_Lions_Students_in_Family__c &gt; 0,
       OR(
          Enrolled_Jaguars_Students_in_Family__c &gt; 0,
          Enrolled_Tigers_Students_in_Family__c &gt; 0,
          Enrolled_Panthers_Students_in_Family__c &gt; 0
          )
       ),
   AND(
       Enrolled_Tigers_Students_in_Family__c &gt; 0,
       OR(
          Enrolled_Jaguars_Students_in_Family__c &gt; 0,
          Enrolled_Lions_Students_in_Family__c &gt; 0,
          Enrolled_Panthers_Students_in_Family__c &gt; 0
          )
       ),
   AND(
       Enrolled_Panthers_Students_in_Family__c &gt; 0,
       OR(
          Enrolled_Jaguars_Students_in_Family__c &gt; 0,
          Enrolled_Lions_Students_in_Family__c &gt; 0,
          Enrolled_Vikings_Students_in_Family__c &gt; 0
          )
       )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Diff. House Enrolled Students</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Enrolment_Fee_Line_Item__c</fullName>
        <label>Has Enrolment Fee Line Item</label>
        <summarizedField>Opportunity.Has_Active_Enrolment_Fee_Line_Item__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Student_in_Campus_1_Account__c</fullName>
        <label>Students in Campus 1</label>
        <summaryFilterItems>
            <field>Opportunity.Is_Campus_1_Student__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Student_in_Campus_2_Account__c</fullName>
        <label>Students in Campus 2</label>
        <summaryFilterItems>
            <field>Opportunity.Is_Campus_2_Student__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <label>Passport/ID Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISM_Kry_Parent_Upper_Lower__c</fullName>
        <formula>IF( AND ( Has_Student_in_Campus_1_Account__c &gt; 0, Year5__c + Year6__c + Year7__c + Year8__c + Year9__c + Year10__c + Year11__c + Year12__c + Year13__c &gt; 0, PreNursery__c + Nursery1__c + Reception1__c + Year1__c + Year2__c + Year3__c + Year4__c = 0), &quot;Upper&quot;, 

IF ( AND ( Has_Student_in_Campus_1_Account__c &gt; 0, Year5__c + Year6__c + Year7__c + Year8__c + Year9__c + Year10__c + Year11__c + Year12__c + Year13__c = 0, PreNursery__c + Nursery1__c + Reception1__c + Year1__c + Year2__c + Year3__c + Year4__c &gt; 0), &quot;Lower&quot;, 

IF ( AND ( Has_Student_in_Campus_1_Account__c &gt; 0, Year5__c + Year6__c + Year7__c + Year8__c + Year9__c + Year10__c + Year11__c + Year12__c + Year13__c &gt; 0, PreNursery__c + Nursery1__c + Reception1__c + Year1__c + Year2__c + Year3__c + Year4__c &gt; 0), &quot;Both&quot;, 

&quot;Error&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISM Kry Parent Upper/Lower</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISM_Ros_Parent_EYFS_Primary__c</fullName>
        <formula>IF( AND ( Year1__c + Year2__c + Year3__c + Year4__c + Year5__c + Year6__c + Year7__c + Year8__c &gt; 0, Nursery1__c + PreNursery__c + Reception1__c = 0), &quot;Primary&quot;, 

IF( AND ( Year1__c + Year2__c + Year3__c + Year4__c + Year5__c + Year6__c + Year7__c + Year8__c = 0, Nursery1__c + PreNursery__c + Reception1__c &gt; 0), &quot;EYFS&quot;, 

IF( AND ( Year1__c + Year2__c + Year3__c + Year4__c + Year5__c + Year6__c + Year7__c + Year8__c &gt; 0, Nursery1__c + PreNursery__c + Reception1__c &gt; 0), &quot;Both&quot;, 

&quot;Error&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISM Ros Parent EYFS/Primary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Notifications_Email_Account__c</fullName>
        <label>IT Notifications Email (Account)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Imported_Appendix_Number__c</fullName>
        <description>This field is only used to place the original appendix numbers for accounts in Moscow.</description>
        <label>Imported Appendix Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intends_to_Apply_for_Financial_Aid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intends to Apply for Financial Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Count__c</fullName>
        <label>Invoice Count</label>
        <summaryFilterItems>
            <field>Invoice_Statement__c.Deleted_or_Includes_Application_Fee_DC__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Statement__c.Payer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Xero_Key__c</fullName>
        <formula>IF( 
   TEXT(Owner.School__c) = &quot;The International School of Moscow&quot;,
   IF(
      OR( 
         TEXT(School_Company__c) = &quot;A001&quot;, 
         TEXT(School_Company__c) = &quot;A002&quot;, 
         TEXT(School_Company__c) = &quot;A003&quot;,
         TEXT(School_Company__c) = &quot;C002&quot;
         ),
      &quot;Moscow A&quot;, 
      &quot;Moscow&quot;
      ), 

   /*IF( 
      TEXT(Owner.School__c) = &quot;The British School of Tashkent&quot;,
      IF(
         OR( 
            TEXT(School_Company__c) = &quot;BU002&quot;, 
            TEXT(School_Company__c) = &quot;CS001&quot;
            ),
      &quot;Tashkent&quot;, 
      &quot;Tashkent A&quot;
      ),*/

      CASE(
           TEXT(Owner.School__c), 
           &quot;The British School of Guangzhou&quot;, &quot;Guangzhou&quot;,
           &quot;The British School of Tashkent&quot;, &quot;Tashkent&quot;, 
           &quot;The British School of Nanjing&quot;, &quot;Nanjing&quot;, 
           &quot;The British International School of Marbella&quot;, &quot;Marbella&quot;, 
           &quot;The British School of Navarra&quot;, &quot;Pamplona&quot;, 
           &quot;The British College of Brazil&quot;, &quot;Sao Paulo&quot;, 
           &quot;The British International School of Kuala Lumpur&quot;, &quot;Kuala Lumpur&quot;, 
           &quot;The British School Yangon&quot;, &quot;Yangon&quot;, 
           &quot;Ukraine International School&quot;, &quot;Kiev&quot;,  
           &quot;Nord Anglia International School Manila&quot;, &quot;Manila A&quot;,
           &quot;King&apos;s College Beijing&quot;, &quot;Beijing&quot;, 
           &quot;The New York International School&quot;, &quot;New York&quot;, 
           &quot;The British School of Brasilia&quot;, &quot;Brasilia&quot;, 
           &quot;Standard Price Book&quot;
           )
      
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Xero Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_to__c</fullName>
        <label>Invoice to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Parent/Guardian</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Undecided/Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_A_to_L_Parent__c</fullName>
        <formula>OR(BEGINS(LastName, &quot;A&quot;), BEGINS(LastName, &quot;B&quot;), BEGINS(LastName, &quot;C&quot;), BEGINS(LastName, &quot;D&quot;), BEGINS(LastName, &quot;E&quot;), BEGINS(LastName, &quot;F&quot;), BEGINS(LastName, &quot;G&quot;), BEGINS(LastName, &quot;H&quot;), BEGINS(LastName, &quot;I&quot;), BEGINS(LastName, &quot;J&quot;), BEGINS(LastName, &quot;K&quot;), BEGINS(LastName, &quot;L&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is A to L Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_BSG_Record_Temp__c</fullName>
        <formula>OR(SchoolText__pc = &quot;The British School of Guangzhou&quot;, Company_School__c = &quot;The British School of Guangzhou&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is BSG Record (Temp)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Founding_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in BSB to indicate which parents should receive a discount to invoices containing monthly tuition fees because they paid an enrolment fee which was not paid for students/families starting after 25/10/2016</description>
        <label>Is Founding Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_M_to_Z_Parent__c</fullName>
        <formula>OR(BEGINS(LastName, &quot;M&quot;), BEGINS(LastName, &quot;N&quot;), BEGINS(LastName, &quot;O&quot;), BEGINS(LastName, &quot;P&quot;), BEGINS(LastName, &quot;Q&quot;), BEGINS(LastName, &quot;R&quot;), BEGINS(LastName, &quot;S&quot;), BEGINS(LastName, &quot;T&quot;), BEGINS(LastName, &quot;U&quot;), BEGINS(LastName, &quot;V&quot;), BEGINS(LastName, &quot;W&quot;), BEGINS(LastName, &quot;X&quot;), BEGINS(LastName, &quot;Y&quot;), BEGINS(LastName, &quot;Z&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is M to Z Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Mass_Email_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mass Email Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Contact__c</fullName>
        <description>Used to display a message telling a contact that they are the primary contact in the SK parent app</description>
        <formula>AND(
    RecordType.DeveloperName = &quot;PersonAccount&quot;,
    TEXT(Primary_Contact__c) = &quot;First Parent&quot;
    )</formula>
        <label>Is Primary Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS2__c</fullName>
        <formula>Year3__c +  Year4__c + Year5__c + Year6__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KS2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Stage_Account__c</fullName>
        <formula>IF(OR( PreNursery__c &gt; 0, Nursery1__c &gt; 0, Reception1__c &gt; 0), &quot;EYFS&quot;, &quot;&quot;) &amp; &quot; &quot; &amp;
IF(OR(Year1__c &gt; 0, Year2__c &gt; 0), &quot;Key Stage 1&quot;, &quot;&quot;) &amp; &quot; &quot; &amp;
IF(OR(Year3__c &gt; 0, Year4__c &gt; 0, Year5__c &gt; 0, Year6__c &gt; 0), &quot;Key Stage 2&quot;, &quot;&quot;) &amp; &quot; &quot; &amp;
IF(OR(Year7__c &gt; 0, Year8__c &gt; 0, Year9__c &gt; 0), &quot;Key Stage 3&quot;, &quot;&quot;) &amp; &quot; &quot; &amp;
IF(OR(Year10__c &gt; 0, Year11__c &gt; 0), &quot;Key Stage 4&quot;, &quot;&quot;) &amp; &quot; &quot; &amp;
IF(OR(Year12__c &gt; 0, Year13__c &gt; 0), &quot;Key Stage 5&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Stage (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Know_the_Family__c</fullName>
        <inlineHelpText>Enter any key information collected during the admissions process that would help someone &apos;Know the Family&apos;</inlineHelpText>
        <label>Know the Family</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Calendar_View_Either_Parent__c</fullName>
        <formula>IF(AND(Related_Contact_Record_P2__r.NewsEvents_Report_Accessed__c &gt; NewsEvents_Report_Accessed__pc, Related_Contact_Record_P2__r.NewsEvents_Report_Accessed__c &lt;&gt; null), Related_Contact_Record_P2__r.NewsEvents_Report_Accessed__c, NewsEvents_Report_Accessed__pc)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Calendar View (Either Parent)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Health_Insurance_Coverage__c</fullName>
        <label>Last Date of Health Insurance Coverage</label>
        <summarizedField>Employment_Agreement__c.Contract_Expiration_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Employment_Agreement__c.Status__c</field>
            <operation>equals</operation>
            <value>Signed- Not Started, Active, Expired</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Employment_Agreement__c.Health_Insurance__c</field>
            <operation>equals</operation>
            <value>International, Both</value>
        </summaryFilterItems>
        <summaryForeignKey>Employment_Agreement__c.Staff_Member__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Leaving_Date_30_Account__c</fullName>
        <formula>IF( Leaving_Date__c &gt;= (TODAY() - 30), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leaving Date -30 (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leaving_Date_60__c</fullName>
        <formula>IF( Leaving_Date__c &gt;= (TODAY() - 60), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leaving Date -60 (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leaving_Date__c</fullName>
        <label>Leaving Date (Account)</label>
        <summarizedField>Opportunity.Leaving_Date__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legal_Rep_Local_Language__c</fullName>
        <label>Legal Rep Local Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Rep__c</fullName>
        <label>Legal Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Manager_Record_ID__c</fullName>
        <formula>Line_Manager__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Manager Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Staff Member, Staff Member - Group Level</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Direct Subordinates</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Manager_s_Email__c</fullName>
        <formula>Line_Manager__r.Email_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Manager&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Family_Account_Record__c</fullName>
        <formula>HYPERLINK(&quot;https://ap4.salesforce.com/&quot;&amp;Id, &quot;Click to View Family (Account) Record&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Family (Account) Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Website_Staff_Directory__c</fullName>
        <formula>CASE(SchoolText__pc, 
&quot;The British International School of Kuala Lumpur&quot;, &quot;https://britishschool.edu.my/british-international-school-kuala-lumpur/staff/staff-directory&quot;, 
&quot;The International School of Moscow&quot;, &quot;https://internationalschool.ru/international-school-moscow/staff/staff-directory&quot;, 
&quot;The British School of Nanjing&quot;, &quot;https://bsn.org.cn/british-school-nanjing/staff/staff-directory&quot;, 
&quot;The British School of Navarra&quot;, &quot;https://bsn.org.es/british-school-navarra/staff/staff-directory&quot;, 
&quot;The British International School of Marbella&quot;, &quot;https://bsm.org.es/british-international-school-marbella/staff/staff-directory&quot;, 
&quot;The British School of Tashkent&quot;, &quot;https://britishschool.uz/british-school-tashkent/staff/staff-directory&quot;, 
&quot;The British College of Brazil&quot;, &quot;https://britishcollegebrazil.org/british-college-brazil/staff/staff-directory&quot;, 
&quot;The British School Yangon&quot;, &quot;https://britishschoolyangon.org/british-school-yangon/staff/staff-directory&quot;, 
&quot;The British School of Guangzhou&quot;, &quot;http://www.bsg.org.cn/british-school-guangzhou/staff/staff-directory&quot;, 
&quot;Ukraine International School&quot;, &quot;http://www.ukraineinternationalschool.com/ukraine-international-school/staff/staff-directory&quot;, 
&quot;King&apos;s College Beijing&quot;, &quot;http://www.kingscollege.cn/kings-college-beijing/staff/staff-directory&quot;, 
&quot;The New York International School&quot;, &quot;https://nyis.org/new-york-international-school/staff/staff-directory&quot;, 
&quot;The British School of Brasilia&quot;, &quot;https://britishschoolbrasilia.org/british-school-brasilia/staff/staff-directory&quot;,
&quot;Nord Anglia International School Manila&quot;, &quot;https://kings.org.ph/kings-school-manila/staff/staff-directory&quot;,
&quot;https://britishschool.edu.my/british-international-school-kuala-lumpur/staff/staff-directory&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Website Staff Directory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Other_nationality__c</fullName>
        <formula>IF(
   OR(
      AND(
          SchoolText__pc = &quot;The International School of Moscow&quot;, 
          TEXT(Nationality__c) = &quot;Russia&quot;
          ), 
      AND(
          OR(
             SchoolText__pc = &quot;The British School of Nanjing&quot;, 
             SchoolText__pc = &quot;The British School of Guangzhou&quot;, 
             SchoolText__pc = &quot;King&apos;s College Beijing&quot;
             ), 
          TEXT(Nationality__c) = &quot;China, People&apos;s Republic of&quot;
          ), 
      AND(
          OR(
             SchoolText__pc = &quot;The British School of Navarra&quot;, 
             SchoolText__pc = &quot;The British International School of Marbella&quot;
             ), 
          TEXT(Nationality__c) = &quot;Spain&quot;
          ), 
      AND(
          SchoolText__pc = &quot;Nord Anglia International School Manila&quot;,
          TEXT(Nationality__c) = &quot;Philippines&quot;), 
      AND(
          SchoolText__pc = &quot;The British School of Tashkent&quot;, 
          TEXT(Nationality__c) = &quot;Uzbekistan&quot;
          ), 
      AND(
          OR(
             SchoolText__pc = &quot;The British College of Brazil&quot;,
             SchoolText__pc = &quot;The British School of Brasilia&quot;
             ), 
          TEXT(Nationality__c) = &quot;Brazil&quot;
          ), 
      AND(
          SchoolText__pc = &quot;The British College of Brazil&quot;, 
          TEXT(Nationality__c) = &quot;Brazil&quot;
          ), 
      AND(
          SchoolText__pc = &quot;The British International School of Kuala Lumpur&quot;,
          TEXT(Nationality__c) = &quot;Malaysia&quot;
          ), 
      AND(
          SchoolText__pc = &quot;The British School Yangon&quot;, 
          TEXT(Nationality__c) = &quot;Myanmar&quot;
          ), 
      AND(
          SchoolText__pc = &quot;Ukraine International School&quot;, 
          TEXT(Nationality__c) = &quot;Ukraine&quot;
          ), 
      AND(
          SchoolText__pc = &quot;The New York International School&quot;, 
          TEXT(Nationality__c) = &quot;United States&quot;
          )
      ), 
   &quot;Local&quot;, 
   &quot;Other Nationality&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local/Other nationality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Address_Copy__c</fullName>
        <formula>Main_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is only used if the &apos;New Format&apos; address fields (above) are blank. If you want to update this address then please put the address in the new fields above. When a &apos;New Format&apos; address is present this address will become obsolete.</inlineHelpText>
        <label>Main Address.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Address_Formula__c</fullName>
        <description>The address which is sent to the financial information form. Required to encode characters that would otherwise cause the URL to break.</description>
        <formula>SUBSTITUTE(Main_Address__c, &quot;#&quot;, &quot;%23&quot;)</formula>
        <label>Main Address Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Address__c</fullName>
        <description>The main address field for a company record only. Temporarily also holds the old address information for &apos;Parent&apos; records, although this is being phased out and should only be edited by system admin on those records during the transition, therefore is only shown on the system admin page layout for parents.</description>
        <label>Main Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Approver__c</fullName>
        <formula>IF(TEXT( Line_Manager__r.Position__c )=&quot;Headteacher&quot;,&quot;Headteacher&quot;,IF( TEXT(School_Department__c )=&quot;Academic&quot;,&quot;Headteacher&quot;,&quot;Head of Administration&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email__c</fullName>
        <label>Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update (Acc)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Leaving_Date__c</fullName>
        <label>Max Leaving Date</label>
        <summarizedField>Employment_Agreement__c.End_Date__c</summarizedField>
        <summaryForeignKey>Employment_Agreement__c.Staff_Member__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Medical_Book_Expiry_Date__c</fullName>
        <label>Medical Book Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_in_Local_Language__c</fullName>
        <label>Company Name in Local Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>